--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -13,3 +13,15 @@ body {
         4px 4px 0px #404040,  
         5px 5px 0px #404040;
 }
+
+#map-container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+}
+path {
+    stroke-width: 0.5px;
+}
+path:hover {
+    fill: #27789b;
+}
