--- a/quiz/quiz-style.css
+++ b/quiz/quiz-style.css
@@ -1,30 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Teko:wght@300..700&display=swap');
 
 body{
-  font-size: 20px;
-  font-family: 'Work Sans', sans-serif;
-  font-weight: 300;
-  text-align: center;
   background-color: #d9c3a9;
+  text-align: center;
 }
 h1{
   font-weight: 300;
   margin: 10px;
-  padding-top: 20px;
+  padding-top: 10px;
   font-size: 50px;
   color: #404040;
-  font-family: Teko;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 }
 .question{
-  font-size: 30px;
-  margin-bottom: 10px;
+  font-size: 25px;
+  margin-bottom: 20px;
+  padding: 10px;
   color: #404040;
 }
 .answers {
   margin-bottom: 20px;
+  padding: 10px;
   text-align: left;
   display: inline-block;
+  font-size: 20px;
 }
 .answers label{
   display: block;
@@ -32,15 +32,15 @@ h1{
 }
 
 button{
-  font-family: 'Work Sans', sans-serif;
   font-size: 22px;
   background-color: #6f8c52;
   color: #f2f2f2;
   border: 0px;
   border-radius: 3px;
-  padding: 20px;
+  padding: 10px;
   cursor: pointer;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 button:hover{
@@ -68,4 +68,7 @@ button:hover{
 
 #results {
     display: block;
-  }
+    color: #404040;
+    border-radius: 3px;
+    font-size: 20px;
+}
