--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -174,3 +174,15 @@ a:hover {
 .hamburger-menu:has(input:checked) + .sidebar {
   translate: 0;
 }
+
+#demo {
+    position: absolute;
+    color: #404040;
+    background-color: #f2f2f2;
+    padding: 5px 10px;
+    border-radius: 4px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+    visibility: hidden; /* Skjules som standard */
+    pointer-events: none;
+}
