--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -12,13 +12,20 @@ body {
 #frontpage_heading {
     margin-top: auto;
     font-size: 60px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:bold;
     color: #404040;
     text-align: center;
     padding-top: 0px ;
     z-index: 20000;
-}
+    transition: opacity 0.5s ease;
+    }
+    
+    #frontpage_heading.hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+
 
 /* Map-container styling */
 #map-container {
@@ -43,11 +50,11 @@ body {
 path {
     stroke-width: 0.6px;
     fill: #6f8c52;
-    cursor: crosshair;
+    
 }
 path:hover {
     fill: #4d7327;
-    cursor: crosshair;
+    
 }
 
 
@@ -185,4 +192,29 @@ a:hover {
     font-weight: bolder;
     visibility: hidden; /* Skjules som standard */
     pointer-events: none;
+}
+
+
+.buttons {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1000;
+}
+
+.buttons button {
+    padding: 10px 20px;
+    background-color: #6f8c52;
+    color: white;
+    border:groove;
+    border-color: #404040;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.buttons button:hover {
+    background-color: #5a733f;
 }
