--- a/quiz/quiz-style.css
+++ b/quiz/quiz-style.css
@@ -5,7 +5,7 @@ body{ /* Giver baggrundsfarve fra vores pallete og centrerer tekst for hele bodi
 
 h1{ /* Overskriften */
   margin: 10px; /* Giver 10px margin til alle sider */
-  padding-top: 10px; /* Giver 10px padding i toppen */
+  padding-top: 60px; /* Giver 10px padding i toppen */
   font-size: 50px; /* Størrelse på fonten */
   color: #404040; /* Farven på teksten - taget fra vores palette */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -43,6 +43,18 @@ button{ /* Knapperne */
   cursor: pointer; /* Gør så musen bliver en 'pointer' når man er på knappen */
   margin-bottom: 20px; /* Sætter 20px margin i toppen */
   margin-top: 20px; /* Sætter 20px margin i bunden */
+}
+
+#start{ /* Start knappen til quizzen */
+  font-size: 40px; /* Sætter start knappen til at være 40px */
+}
+
+#return{ /* Retur knappen til forsiden */
+  font-size: 16px; /* Font størrelse */
+  position: fixed; /* Gør så knappen bliver i venstre hjørne når man scroler ned ad siden */
+  left: 0; /* Refererer til positionen af knappen */
+  margin-left: 15px; /* Sætter 15px margin i venstre side */
+  margin-top: 5px; /* Sætter 5px margin i toppen */
 }
 
 button:hover{ /* Når der hovers over knappen */
