--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -218,3 +218,43 @@ a:hover {
 .buttons button:hover {
     background-color: #5a733f;
 }
+
+#popUp {
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  background: white;
+  padding: 20px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  z-index: 1000;
+  display: none;
+}
+#popUpOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 999;
+  display: none;
+}
+#closePopUp {
+  background: #6f8c52;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+#closePopUp button:hover {
+  background: #0056b3;
+}
+
+#bold{
+  font-weight: bold;
+}
