--- a/semesterprojekt/about/about-style.css
+++ b/semesterprojekt/about/about-style.css
@@ -73,7 +73,8 @@ h1 {
     background-color: #6f8c52; /* Baggrundsfarve valgt fra vores farvepalette */
     color: #f2f2f2; /* Farven på teksten valgt fra vores palette */
     position: fixed; /* Gør så knappen bliver i venstre hjørne når man scroler ned ad siden */
-    border: 0px; /* Fjerner border */
+    border: groove; /* Giver groove til kanten */
+    border-color: #f2f2f2; /* Giver hvid til kant */
     border-radius: 10px; /* Brugt for at gøre hjørnerne runde */
     padding: 10px; /* Sætter 10px padding rundt om  */
     cursor: pointer; /* Gør så musen bliver en 'pointer' når man er på knappen */
