--- a/semesterprojekt/statistics/statistics.css
+++ b/semesterprojekt/statistics/statistics.css
@@ -12,7 +12,8 @@ body{
     font-size: 16px; /* Størrelse på teksten */
     background-color: #6f8c52; /* Baggrundsfarve valgt fra vores farvepalette */
     color: #f2f2f2; /* Farven på teksten valgt fra vores palette */
-    border: 0px; /* Fjerner border */
+    border: groove; /* Giver groove til kanten */
+    border-color: #f2f2f2; /* Giver hvid kant */
     border-radius: 10px; /* Brugt for at gøre hjørnerne runde */
     padding: 10px; /* Sætter 10px padding rundt om  */
     cursor: pointer; /* Gør så musen bliver en 'pointer' når man er på knappen */
@@ -20,4 +21,9 @@ body{
     left: 0; /* Refererer til positionen af knappen */
     margin-left: 15px; /* Sætter 15px margin i venstre side */
     margin-top: 5px; /* Sætter 5px margin i toppen */
+
+}
+
+#returnButton:hover {
+    background-color: #5a733f;
 }
