--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -287,3 +287,40 @@ a:hover {
 #closePopUp:hover {
   background-color: #5a733f; /* Farve når man hover over knappen */
 }
+
+.sidebar2 {
+  position: fixed; /* Fastgør sidebar til skærmen */
+  top: 30px; /* Afstand fra toppen */
+  right: -300px; /* Placer sidebar uden for skærmen */
+  width: 250px; /* Bredde */
+  height: auto; /* Automatisk højde */
+  background-color: #edd7be; /* Baggrundsfarve */
+  padding: 0.5rem 1rem; /* Indre afstand */
+  text-align: left; /* Venstrejusteret tekst */
+  z-index: 29; /* Sørger for, at den er synlig */
+  border-radius: 10px; /* Runde hjørner */
+  border: groove; /* Groove-stil kant */
+  border-color: #f2f2f2; /* Kantfarve */
+  transition: right 0.3s ease-in-out; /* Glidende overgang */
+}
+
+.sidebar2.visible {
+  right: 30px; /* Flytter sidebar ind på skærmen */
+}
+
+
+/* Styling af tooltip (info om lande) */
+#demo2 {
+  color: #404040; /* Tekstfarve */
+  padding: 5px 1px; /* Indre afstand */
+  border-radius: 4px; /* Afrundede hjørner */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Skrifttype */
+  visibility:hidden; /* Skjules som standard */
+  pointer-events: none; /* Ingen interaktion muligt */
+}
+
+h4 {
+  font-size:xx-large;
+  margin-top: 10px;
+  padding-bottom: -40px;
+}
