--- a/semesterprojekt/statistics/statistics.css
+++ b/semesterprojekt/statistics/statistics.css
@@ -2,11 +2,17 @@ body{
     background-color: #d9c3a9; /* Baggrundsfarve - fra vores farvepalette */
 }
 
-#statHeadline{
-    color: #404040; /* Farven på teksten - fra vores farvepalette */
-    font-size: 50px; /* Størrelsen på overskriften */ 
-    text-align: center; /* Centrerer overskriften */
-}
+h1 {
+    margin-top: 20px;  /*Automatiserer topmargen */
+    font-size: 50px; /* Skriftstørrelse */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Skrifttype */
+    font-weight: bold; /* Gør teksten fed */
+    color: #404040; /* Tekstfarve */
+    text-align: center; /* Centrerer teksten */
+    z-index: 11; /* Sørger for, at den er bag andre elementer med højere z-index */
+    transition: opacity 0.5s ease; /* Glidende overgang for gennemsigtighed */
+    overflow: hidden; /* Skjuler overskydende indhold*/
+  }
 
 #returnButton{
     font-size: 16px; /* Størrelse på teksten */
