--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -11,8 +11,8 @@ body {
 }
 
 
-/* Styling af #frontpage_heading-elementet */
-#frontpage_heading {
+/* Styling af #frontpageHeading-elementet */
+#frontpageHeading {
   margin-top: auto;  /*Automatiserer topmargen */
   font-size: 60px; /* Skriftstørrelse */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Skrifttype */
@@ -26,8 +26,8 @@ body {
 
 
 
-/* Når #frontpage_heading har klassen hidden */
-#frontpage_heading.hidden {
+/* Når #frontpageHeading har klassen hidden */
+#frontpageHeading.hidden {
   opacity: 0; /* Gør elementet gennemsigtigt */
   pointer-events: none; /* Deaktiverer klik og andre pointer-events */
   z-index: 11; /* Sørger for, at den er bag andre elementer med højere z-index */
