--- a/semesterprojekt/statistics/statistics.css
+++ b/semesterprojekt/statistics/statistics.css
@@ -27,3 +27,11 @@ body{
 #returnButton:hover {
     background-color: #5a733f;
 }
+
+#barchart {
+    width: 100%;
+    height: 500px;
+    overflow: visible;
+    padding-bottom: 50px;
+    text-align: center;
+}
