--- a/semesterprojekt/statistics/statistics.css
+++ b/semesterprojekt/statistics/statistics.css
@@ -41,3 +41,11 @@ h1 {
     padding-bottom: 50px;
     text-align: center;
 }
+
+#barchart-land {
+    width: 100%;
+    height: 500px;
+    overflow: visible;
+    padding-bottom: 50px;
+    text-align: center;
+}
