--- a/semesterprojekt/styles.css
+++ b/semesterprojekt/styles.css
@@ -6,10 +6,8 @@
 /* Styler hele body-elementet */
 body {
   background-color: #d9c3a9; /* Sætter en baggrundsfarve */
-  cursor: url('sun-cursor.png'), auto; /* Bruger en custom cursor med fallback */
+  cursor: url('sunCursor.png'), auto; /* Bruger en custom cursor med fallback */
   margin: 0; /* Fjerner standardmargen */
-  width: 100dvh;
-  height: 100dvh;
   overflow: hidden;
 }
 
